--- a/inst/www/template.css
+++ b/inst/www/template.css
@@ -11,6 +11,22 @@
 }
 
 
+pre {
+    display: block;
+    padding: 9.5px;
+    margin: 0 0 10px;
+    font-size: 13px;
+    line-height: 1.42857143;
+    color: #333;
+    word-break: break-all;
+    word-wrap: break-word;
+    background-color: #f5f5f5;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    overflow: scroll;
+    height: 130px;
+}
+
 .skin-blue .main-header .logo {
   background-color: #282c2f;
   line-height: 30px;
@@ -281,10 +297,3 @@ display: inline-block;
 
 div.copying { background-color: yellow; }
 div.copying .nocopy { display: none; }
-
-
-.GM1BXT-CIO {
-    border: 1px solid #b30000;
-    height:1000px;
-    width:1200px;
-}
